--- a/pastyle.css
+++ b/pastyle.css
@@ -26,8 +26,6 @@ nav a {
     transition: background-color 0.3s;
 }
 
-
-
 .gallery {
     display: flex;
     flex-wrap: wrap;
@@ -42,14 +40,58 @@ nav a {
     padding: 10px;
     text-align: center;
     max-width: 200px;
+    cursor: pointer;  /* Makes it clear that the card is clickable */
 }
 
 .art-piece img {
     max-width: 100%;
     border-radius: 5px;
+    transition: transform 0.3s;  /* Smooth zoom effect */
+}
+
+.art-piece img:hover {
+    transform: scale(1.05);  /* Slight zoom on hover */
 }
 
 .art-piece p {
     margin: 10px 0 0;
     font-size: 1.1em;
+}
+
+/* Modal Styles */
+#modal {
+    display: none;  /* Hidden by default */
+    position: fixed;
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);  /* Black with transparency */
+    padding-top: 60px;
+}
+
+#modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+#modal-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+#modal-close:hover,
+#modal-close:focus {
+    color: #bb8f47;
+    text-decoration: none;
+    cursor: pointer;
 }
