--- a/style.css
+++ b/style.css
@@ -112,6 +112,26 @@ h2 {
     color: #4b5563;
 }
 
+.view-more {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #bb8f47;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #444;
+}
+
 .technologies {
     background-color: #e5e7eb;
     padding: 5px 10px;
